--- a/src/app/components/vigilancia/vigilancia.component.html
+++ b/src/app/components/vigilancia/vigilancia.component.html
@@ -1,89 +1,105 @@
-<div class="navega card-header">
-  <a class="leter nav-link" href="#">
-    <i class="fas fa-home-lg-alt"></i>
-    Inicio >
-    <i class="navs">Monitoreo de Vigilancia</i>
-  </a>
-</div>
+<app-navbar></app-navbar>
+<br>
 
-<br />
-<div class="table-responsive">
-  <table
-    id="example"
-    style="width: 100%; height: 100%;"
-    class="table table-striped table-bordered"
-  >
-    <thead>
-      <tr>
-        <th>Núm solicitud</th>
-        <th>Solicitante</th>
-        <th>Provedor</th>
-        <th>Nombre Provedor</th>
-        <th>Motivo Salida</th>
-        <th>Descripción</th>
-        <th>Autorizador</th>
-        <th>Salida</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of datatable" style="width: 100%;">
-        <td>{{ item.id_solicitud }}</td>
-        <td>{{ item.solicitante }}</td>
-        <td>{{ item.para }}</td>
-        <td>{{ item.nombreProvedor }}</td>
-        <td>{{ item.motivo }}</td>
-        <td>{{ item.descripcion }}</td>
-        <td>{{ item.autorizador }}</td>
-        <td>{{ item.fechaSalida }}</td>
-        <div
-          *ngIf="item.validarSalida !== ''; then thenBlock; else elseBlock"
-        ></div>
-        <ng-template #thenBlock>
-          <td>
-            <button
-              type="bu"
-              class="btn btn-primary"
-              (click)="onSetData1(item); onUpdateSalida(solicitud)"
-              disabled
-            >
-              Marcar salida
-            </button>
-          </td>
-        </ng-template>
-        <ng-template #elseBlock>
-          <div
-          *ngIf="item.status2 === 'En reparación con'; then sale else nosale"
-        ></div>
-         <ng-template #sale>
-          <td>
-            <button
-            
-              type="bu"
-              class="btn btn-primary"
-              (click)="onSetData1(item); onUpdateSalida(solicitud)"
-              
-            >
-              Marcar salida
-            </button>
-          </td>
-         </ng-template>
-         <ng-template #nosale>
-          <td>
-            <button
-            disabled
-              type="bu"
-              class="btn btn-primary"
-              (click)="onSetData1(item); onUpdateSalida(solicitud)"
-              
-            >
-              Marcar salida
-            </button>
-          </td>
-         </ng-template>
+ 
+ 
+<!--tabla nueva-->
+
+<div class="container">
+  <div class="input-group input-group-sm mb-3">
+    <div class="input-group-prepend">
+      <span class="serch input-group-text" id="inputGroup-sizing-sm"><i class="fa-solid fa-magnifying-glass"></i></span>
+    </div>
+    <input type="text" class=" form-control" aria-label="Small" id="search" placeholder="buscar un registro...">
+  </div>
+  <div class="table-responsive">
+    <table class="table" id="tblDatos">
+      <thead>
+        <tr>
+          <th  class="id">#</th>
           
-        </ng-template>
-      </tr>
-    </tbody>
-  </table>
-</div>
+         <th  class="cabezaras">Detalles</th>
+          <th  class="cabezaras" style="text-align:center;"><i class="fa-solid fa-gears"></i></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of datatable" style="width: 100%;">
+        <td class="id">{{ item.id_solicitud }}</td>
+         <!-- <td>{{ item.solicitante }}</td>--> 
+         
+           <td>
+            <div class="tarjeta">
+              <p>Los articulos; 
+                <b>{{item.descripcion}},</b> han sido entregados a <b> {{ item.nombreProvedor}}</b> el día <b>{{item.fechaSalida}}</b> con motivo de <b>{{item.motivo}}</b>. </p>
+           
+            </div>
+         
+    
+    
+    
+           </td>
+           <!-- <td>{{ item.motivo }}</td></td>--> 
+           <!--  <td>{{ item.descripcion }}</td>--> 
+        
+         <!--  <td>{{ item.autorizador }}</td>--> 
+          
+          
+          <div
+            *ngIf="item.validarSalida !== ''; then thenBlock; else elseBlock"
+          ></div>
+          <ng-template #thenBlock>
+            <td>
+             
+              <button
+                type="bu"
+                class="btn btn-primary"
+                (click)="onSetData1(item); onUpdateSalida(solicitud)"
+                disabled
+              >
+               Confirmar
+              </button>
+            </td>
+          </ng-template>
+          <ng-template #elseBlock>
+            <div
+            *ngIf="item.status2 === 'En reparación con'; then sale else nosale"
+          ></div>
+           <ng-template #sale>
+            <td>
+              
+              <button
+              
+                type="bu"
+                class="btn btn-primary"
+                (click)="onSetData1(item); onUpdateSalida(solicitud)"
+                
+              >
+              Confirmar
+              </button>
+            </td>
+           </ng-template>
+           <ng-template #nosale>
+            <td>
+              <button
+              disabled
+                type="bu"
+                class="btn btn-primary"
+                (click)="onSetData1(item); onUpdateSalida(solicitud)"
+                
+              >
+              Confirmar
+              </button>
+            </td>
+           </ng-template>
+            
+          </ng-template>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div id="paginador"></div>
+</div> 
+
+
+<!--tabla nueva-->
+
