actualizacion de tablas, control de filtros y validaciones en tablas

--- a/src/app/components/autorizar/autorizar.component.html
+++ b/src/app/components/autorizar/autorizar.component.html
@@ -21,7 +21,7 @@
           <b>{{ item.fechaSolicitud }}</b>
         </p>
         <p class="card-text">
-          Provedor:
+          Proveedor:
           <b>{{ item.provedor }}</b>
         </p>
         <p class="card-text">
