--- a/src/app/components/view-hitori-com/view-hitori-com.component.html
+++ b/src/app/components/view-hitori-com/view-hitori-com.component.html
@@ -17,10 +17,11 @@
     <table class="table" id="tblDatos">
      
         <thead>
-          <tr>
+         
+          <tr >
             <th class="id">id_solicitud</th>
-            <th class="cabezaras">Solicitante</th>
-            <th class="cabezaras">Área</th>
+            <th class="cabezaras">Fecha de creación</th>
+            <th class="cabezaras">Detalles</th>
             
          
           </tr>
