--- a/src/app/components/vigilancia/vigilancia.component.html
+++ b/src/app/components/vigilancia/vigilancia.component.html
@@ -19,7 +19,7 @@
           <th  class="id">#</th>
           
          <th  class="cabezaras">Detalles</th>
-          <th  class="cabezaras" style="text-align:center;"><i class="fa-solid fa-gears"></i></th>
+          <th  class="cabezaras" style="text-align:center;"><i class="fas fa-check-square"></i></th>
         </tr>
       </thead>
       <tbody>
@@ -52,7 +52,7 @@
              
               <button
                 type="bu"
-                class="btn btn-primary"
+                class="btn btn-primary btn-sm"
                 (click)="onSetData1(item); onUpdateSalida(solicitud)"
                 disabled
               >
@@ -70,7 +70,7 @@
               <button
               
                 type="bu"
-                class="btn btn-primary"
+                class="btn btn-primary btn-sm"
                 (click)="onSetData1(item); onUpdateSalida(solicitud)"
                 
               >
@@ -83,7 +83,7 @@
               <button
               disabled
                 type="bu"
-                class="btn btn-primary"
+                class="btn btn-primary btn-sm"
                 (click)="onSetData1(item); onUpdateSalida(solicitud)"
                 
               >
