--- a/src/app/components/mostrar-datos/mostrar-datos.component.html
+++ b/src/app/components/mostrar-datos/mostrar-datos.component.html
@@ -1,31 +1,30 @@
 <div class="navega card-header " *ngFor="let item of datatable">
-    <a class="leter nav-link "  href="general"><i class="fa-solid fa-table"></i> Vista general > <i class="navs">Ticket número  {{ item.id_solicitud}}</i></a> 
-  </div>
+    </div>
   
-   <div class="card text-center">
-    
+   <div class=" card  text-center">
+    <div class="v2">
+      <div class="tarjeta navega card-header">
+       
+          <h5 class="card-title">Datos de la Solicitud</h5>
+       
+      </div>
     <div class="card-body" *ngFor="let item of datatable" >
-      <h5 class="card-title">Datos de la Solicitud</h5>
-      <hr>
+
       <p class="card-text">No. Solicitud:<b> {{item.id_solicitud}}</b></p>
       <p class="card-text">Solicitante<b> {{item.solicitante}}</b></p>
       <p class="card-text">Fecha Solicitud: <b> {{item.fechaSolicitud}}</b></p>
-      <p class="card-text">Provedor: <b> {{item.proveedor}}</b></p>
+      <p class="card-text">Provedor: <b> {{item.provedor}}</b></p>
       <p class="card-text">Motivo Salida: <b> {{item.motivo}}</b> </p>
-      <p class="card-text">Cantidad: <b> {{item.cantidad}}</b></p>
-      <p class="card-text">Unidad Medida: <b> {{item.unidadMedida}}</b> </p>
       <p class="card-text">Area: <b> {{item.area}}</b></p>
       <p class="card-text">Descripción: <b> {{item.descripcion}}</b></p>
       <p class="card-text">Observaciones: <b> {{item.observaciones}}</b></p>
+      <p class="card-text">Comentarios Autorizador: <b> {{item.comentariosAutorizador}}</b> </p>
       <p class="card-text"><b>{{item.statusAprovacion}}</b></p>
   
       
       
     </div>
-    <div class="card-footer text-muted">
-      Autoriza @Autorizador
-    </div>
-  </div>
+  
    
   
   <!-- <div class="sticky-container">
